Deleted some duplicate questions and sorted some of them into their Papers (but there is still plenty of unsorted ones at the end)

--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -10,6 +10,32 @@
 {The World of the Cross}{0}
 \qstop
 
+\qstart{The purpose of the Fifth Epochal Revelation is}
+{to expand cosmic consciousness and enhance spiritual perception}{1}
+{to overthrow all existing religions}{0}
+{to make progress faster}{0}
+{to make people righteous}{0}
+{to satisfy people's curiosity about life after death}{0}
+\qstop
+
+\qstart{The Fifth Epochal Revelation (Urantia Papers) was revealed in ...}
+{Armenian}{0}
+{Russian}{0}
+{English}{1}
+{French}{0}
+{German}{0}
+{Italian}{0}
+{Mandarin}{0}
+\qstop
+
+\qstart{Where do all personal beings derive their personality from?}
+{Universal Father}{1}
+{Eternal Son}{0}
+{Infinite Spirit}{0}
+{God the Sevenfold}{0}
+{Paradise Creator Sons}{0}
+\qstop
+
 \qstart{What is the name of our local Universe?}
 {Orvonton}{0}
 {Nebadon}{1}
@@ -362,6 +388,13 @@
 
 \qpaper{1}{The Universal Father}
 
+\qstart{What is man's choicest (in fact, the only possible) gift to God?}
+{consecration of will}{1}
+{prayer}{0}
+{meditation}{0}
+{helping the poor}{0}
+\qstop
+
 \qpaper{2}{The Nature of God}
 
 \qpaper{3}{The Attributes of God}
@@ -380,6 +413,13 @@
 \qpaper{5}{God’s Relation to the Individual}
 
 \qpaper{6}{The Eternal Son}
+
+\qstart{Which of these is the capital of our local universe?}
+{Salvington}{1}
+{Edentia}{0}
+{Uversa}{0}
+{Jerusem}{0}
+\qstop
 
 \qpaper{7}{Relation of the Eternal Son to the Universe}
 
@@ -412,7 +452,54 @@
 
 \qpaper{14}{The Central and Divine Universe}
 
+\qstart{One Paradise-Havona day is equivalent to how much Urantia time?}
+{100 years}{0}
+{30 days}{0}
+{15 days}{0}
+{1000 years}{1}
+{1 day}{0}
+\qstop
+
 \qpaper{15}{The Seven Superuniverses}
+
+\qstart{How many inhabited planets constitute a system?}
+{1000}{1}
+{1024}{0}
+{500}{0}
+{777}{0}
+{1000000}{0}
+\qstop
+
+\qstart{How many systems constitute a constellation?}
+{100}{1}
+{10}{0}
+{24}{0}
+{100000}{0}
+{70}{0}
+\qstop
+
+\qstart{How many inhabited worlds can there be in a single constellation?}
+{100000}{1}
+{1000}{0}
+{1000000}{0}
+{777}{0}
+\qstop
+
+\qstart{How many constellations constitute a local universe?}
+{100}{1}
+{10}{0}
+{24}{0}
+{100000}{0}
+{70}{0}
+\qstop
+
+\qstart{How many inhabited worlds can there be in a local universe?}
+{100000}{0}
+{1000}{0}
+{10000000}{1}
+{777777}{0}
+{700000}{0}
+\qstop
 
 \qstart{How many stars are there in the superuniverse of Orvonton?}
 {70 trillion}{0}
@@ -451,7 +538,35 @@
 {Architectural spheres}{0}
 \qstop
 
+\qstart{Are there stars which emit light not accompanied by heat?}
+{yes}{1}
+{no}{0}
+\qstop
+
+\qstart{Which of these is the capital of our local system?}
+{Salvington}{0}
+{Edentia}{0}
+{Uversa}{0}
+{Jerusem}{1}
+\qstop
+
+\qstart{Which of these is the headquarters of our constellation?}
+{Salvington}{0}
+{Edentia}{1}
+{Uversa}{0}
+{Jerusem}{0}
+\qstop
+
 \qpaper{16}{The Seven Master Spirits}
+
+\qstart{What is the total number of associative possibilities of three Deities?}
+{7}{1}
+{9}{0}
+{3}{0}
+{12}{0}
+{24}{0}
+{$\infty$}{0}
+\qstop
 
 \qpaper{17}{The Seven Supreme Spirit Groups}
 
@@ -499,7 +614,28 @@
 
 \qpaper{36}{The Life Carriers}
 
+\qstart{Which number is inherent in the physical organization of energy and matter, but not in the spiritual?}
+{10}{1}
+{7}{0}
+{12}{0}
+{24}{0}
+\qstop
+
+\qstart{How many configurations (by inheritance carriers) of will creatures are there in Orvonton?}
+{7}{1}
+{12}{0}
+{10}{0}
+{Infinitely many}{0}
+\qstop
+
 \qpaper{37}{Personalities of the Local Universe}
+
+\qstart{What are abandonters doing at present?}
+{administering the routine affairs of their world}{1}
+{helping midwayers}{0}
+{teaching morontia progressors}{0}
+{tending the gardens of Edentia}{0}
+\qstop
 
 \qpaper{38}{Ministering Spirits of the Local Universe}
 
@@ -510,6 +646,13 @@
 \qpaper{41}{Physical Aspects of the Local Universe}
 
 \qpaper{42}{Energy --- Mind and Matter}
+
+\qstart{What is the lowest density of matter-energy known in our local universe?}
+{100 ultimatons in 16.4 cm\ts{3}}{1}
+{10 ultimatons in 16.4 cm\ts{3}}{0}
+{1 ultimaton in 16.4 cm\ts{3}}{0}
+{0}{0}
+\qstop
 
 \qstart{How many ultimatons make one electron?}
 {3}{0}
@@ -522,6 +665,13 @@
 \qstop
 
 \qpaper{43}{The Constellations}
+
+\qstart{Who was the ``Most High'', which Melchizedek is said to be the priest of?}
+{Yahweh, the Lord God of Israel}{0}
+{Father Melchizedek}{0}
+{Vorondadek observer}{1}
+{Michael of Nebadon}{0}
+\qstop
 
 \qpaper{44}{The Celestial Artisans}
 
@@ -587,6 +737,86 @@
 
 \qpaper{53}{The Lucifer Rebellion}
 
+\qstart{Who was Lucifer at the time of the rebellion?}
+{System Sovereign}{1}
+{Planetary Prince}{0}
+{Member of System Sovereign's Staff}{0}
+{Free from assignment}{0}
+\qstop
+
+\qstart{When did the Lucifer rebellion occur in the system of Satania?}
+{200,000 years ago}{1}
+{300,000 years ago}{0}
+{500,000 years ago}{0}
+{1 million years ago}{0}
+{6,000 years ago}{0}
+\qstop
+
+\qstart{Lucifer was a ...}
+{Primary Lanonandek Son}{1}
+{Secondary Lanonandek Son}{0}
+{Melchizedek}{0}
+{Seraphim}{0}
+{Archangel}{0}
+\qstop
+
+\qstart{Satan was a...}
+{Primary Lanonandek Son}{1}
+{Secondary Lanonandek Son}{0}
+{Melchizedek}{0}
+{Seraphim}{0}
+{Archangel}{0}
+\qstop
+
+\qstart{Who was the chief of the staff of Caligastia and the leader of the rebels?}
+{Abaddon}{1}
+{Beelzebub}{0}
+{Satan}{0}
+{Judas Iscariot}{0}
+\qstop
+
+\qstart{Who was the leader of the disloyal midway creatures?}
+{Beelzebub}{1}
+{Abaddon}{0}
+{Satan}{0}
+{Judas Iscariot}{0}
+\qstop
+
+\qstart{Caligastia was a..}
+{Primary Lanonandek Son}{0}
+{Secondary Lanonandek Son}{1}
+{Melchizedek}{0}
+{Seraphim}{0}
+{Archangel}{0}
+\qstop
+
+\qstart{The dragon of the Revelation of John is symbolic of...}
+{Abaddon}{1}
+{Judas Iscariot}{0}
+{Beelzebub}{1}
+{Lucifer}{1}
+{Satan}{1}
+{Stalin}{0}
+\qstop
+
+\qstart{The fallen prince Caligastia is now...}
+{freely roaming this planet}{1}
+{in custody}{0}
+{executed}{0}
+\qstop
+
+\qstart{Lucifer is now...}
+{freely roaming the local system of Satania}{0}
+{in custody}{1}
+{executed}{0}
+\qstop
+
+\qstart{Satan is now...}
+{freely roaming the local system of Satania}{0}
+{in custody}{1}
+{executed}{0}
+\qstop
+
 \qpaper{54}{Problems of the Lucifer Rebellion}
 
 \qpaper{55}{The Spheres of Light and Life}
@@ -606,6 +836,13 @@
 \qpaper{58}{Life Establishment on Urantia}
 
 \qpaper{59}{The Marine\hyp{}Life Era on Urantia}
+
+\qstart{When does the history of our planet officially begin?}
+{1 billion years ago}{1}
+{100 million years ago}{0}
+{1 million years ago}{0}
+{6000 years ago}{0}
+\qstop
 
 \qstart{Into how many geologic eras is the history of our planet divided?}
 {3}{0}
@@ -736,6 +973,13 @@
 
 \qpaper{61}{The Mammalian Era on Urantia}
 
+\qstart{When was the last great ice age terminated?}
+{37,000 B.C.}{1}
+{47,000 B.C.}{0}
+{25,000 B.C.}{0}
+{10,500 B.C.}{0}
+\qstop
+
 \qstart{When did the horse (as it now exists) evolve?}
 {5 million years ago}{1}
 {3 million years ago}{0}
@@ -772,6 +1016,12 @@
 {1 million years ago}{1}
 \qstop
 
+\qstart{How did Andon and Fonta's parents die?}
+{killed by gibbons}{1}
+{killed by saber-toothed cat Smilodon}{0}
+{died of old age}{0}
+\qstop
+
 \qpaper{63}{The First Human Family}
 
 \qstart{What names were bestowed upon the first human beings at the time of fusion?}
@@ -780,6 +1030,20 @@
 {Sonta\hyp{}an and Sonta\hyp{}en}{0}
 {Andon and Fonta}{1}
 {Abraham and Sarah}{0}
+\qstop
+
+\qstart{How many years did Andon and Fonta live?}
+{42}{1}
+{45}{0}
+{120}{0}
+{486}{0}
+\qstop
+
+\qstart{How did Andon and Fonta die?}
+{rock fell on them during an earthquake}{1}
+{drowned}{0}
+{killed by gibbons}{0}
+{ate poison mushrooms}{0}
 \qstop
 
 \qpaper{64}{The Evolutionary Races of Colour}
@@ -792,6 +1056,20 @@
 {6,000 years ago}{0}
 \qstop
 
+\qstart{Which three of the evolutionary races are primary (superior intellectually and spiritually)?}
+{red, yellow and blue}{1}
+{red, green and blue}{0}
+{orange, green and indigo}{0}
+{orange, green and blue}{0}
+\qstop
+
+\qstart{Which three of the evolutionary races are secondary (inferior intellectually and spiritually)?}
+{orange, green and indigo}{1}
+{red, yellow and orange}{0}
+{red, yellow and blue}{0}
+{orange, yellow and indigo}{0}
+\qstop
+
 \qstart{Which of these was a great leader of green men 350,000 years ago?}
 {Onagar}{0}
 {Porshunta}{0}
@@ -799,9 +1077,88 @@
 {Sontad}{0}
 \qstop
 
+\qstart{Where is now the orange race of humans?}
+{became extinct}{1}
+{was taken by aliens}{0}
+{never existed}{0}
+\qstop
+
+\qstart{Who was the great spiritual leader of the orange race about 300,000 years ago?}
+{Porshunta}{1}
+{Fantad}{0}
+{Sontad}{0}
+{Onamonalonton}{0}
+{Onagar}{0}
+\qstop
+
+\qstart{Where was the headquarters of the orange race?}
+{Armageddon}{1}
+{Jerusalem}{0}
+{Babylon}{0}
+{Memphis}{0}
+\qstop
+
+\qstart{Who was the first of the yellow men to teach and lead his people in the worship of ``One Truth'' instead of many?}
+{Singlangton}{1}
+{Orlandof}{0}
+{Porshunta}{0}
+{Enoch}{0}
+{Onamonalonton}{0}
+\qstop
+
+\qstart{When did Singlangton teach the yellow men of Urantia?}
+{10,000 years ago}{0}
+{100,000 years ago}{1}
+{200,000 years ago}{0}
+{212,000 years ago}{0}
+{300,000 years ago}{0}
+{370,000 years ago}{0}
+\qstop
+
+\qstart{Which of these was a great leader of American red race 65,000 years ago?}
+{Onamonalonton}{1}
+{Sontad}{0}
+{Fantad}{0}
+{Porshunta}{0}
+{Onagar}{0}
+\qstop
+
+\qstart{When did Onamonalonton live on Urantia?}
+{5,000 years ago}{0}
+{25,000 years ago}{0}
+{65,000 years ago}{1}
+{85,000 years ago}{0}
+{185,000 years ago}{0}
+{200,000 years ago}{0}
+\qstop
+
+\qstart{What was Onamonalonton's age when he died?}
+{46 years}{0}
+{66 years}{0}
+{96 years}{1}
+{126 years}{0}
+{156 years}{0}
+{200 years}{0}
+\qstop
+
+\qstart{Where did Onamonalonton live?}
+{Canada}{0}
+{California}{1}
+{Texas}{0}
+{Mexico}{0}
+\qstop
+
 \qpaper{65}{The Overcontrol of Evolution}
 
 \qpaper{66}{The Planetary Prince of Urantia}
+
+\qstart{What was the name of the city of the Planetary Prince Caligastia?}
+{Babylon the Great}{0}
+{Akkad}{0}
+{Dalamatia}{1}
+{Jerusalem}{0}
+{Eden}{0}
+\qstop
 
 \qstart{What or who is a fandor?}
 {A kind of fish}{0}
@@ -841,6 +1198,14 @@
 
 \qpaper{69}{Primitive Human Institutions}
 
+\qstart{When did the aborigines of Australia abolish slavery?}
+{15th century}{0}
+{19th century}{0}
+{20th century}{0}
+{never had slaves}{1}
+\qstop
+
+
 \qpaper{70}{The Evolution of Human Government}
 
 \qpaper{71}{Development of the State}
@@ -848,6 +1213,13 @@
 \qpaper{72}{Government on a Neighbouring Planet}
 
 \qpaper{73}{The Garden of Eden}
+
+\qstart{What is the minimal size of Adamic family required for initiating racial uplifting of human races?}
+{500,000 persons}{1}
+{100 persons}{0}
+{1,000,000 persons}{0}
+{40 persons}{0}
+\qstop
 
 \qstart{Who guarded the tree of life in the garden of Eden after Adam and Eve left it?}
 {seraphim with a sword}{0}
@@ -875,6 +1247,14 @@
 {66,666}{0}
 \qstop
 
+\qstart{When did Adam and Eve appear?}
+{on the sixth day of creation, about 6,000 years ago}{0}
+{35,914 B.C.}{1}
+{335,437,011 B.C.}{0}
+{4,559 B.C.}{0}
+{236,992 B.C.}{0}
+\qstop
+
 \qstart{How long did it take to rematerialize the bodies of Adam and Eve after they arrived from Jerusem on seraphic transport?}
 {1 day}{0}
 {7 days}{0}
@@ -897,6 +1277,13 @@
 {2.8\,m}{0}
 {3.1\,m}{0}
 {3.5\,m}{0}
+\qstop
+
+\qstart{What form of government did Adam and Eve find upon their arrival on Urantia?}
+{democracy}{0}
+{theocracy}{0}
+{oligarchy}{0}
+{no government worthy of a name}{1}
 \qstop
 
 \qstart{What was the name of the firstborn son of Adam and Eve born on this planet?}
@@ -1011,12 +1398,25 @@
 {the sin of conscious and deliberate rebellion}{0}
 \qstop
 
+\qstart{Were Adam and Eve able to see midwayers, angels, Melchizedeks and Caligastia after the default?}
+{yes, but only for 100 years}{1}
+{yes, for as long as they lived}{0}
+{no}{0}
+\qstop
+
 \qstart{The name of the first child of Adam and Eve to be born in the second garden was ...}
 {Cain}{0}
 {Abel}{1}
 {Seth}{0}
 {Sansa}{0}
 {Adamson}{0}
+\qstop
+
+\qstart{In which year did Cain slay Abel?}
+{35,776 B.C.}{1}
+{3,600 B.C.}{0}
+{no record of the date}{0}
+{27,561 B.C.}{0}
 \qstop
 
 \qstart{How old were Cain and Abel when the tension between them was finally resolved?}
@@ -1034,6 +1434,20 @@
 {Cain told them}{0}
 {Cain sent the message by a servant}{0}
 {by a Secondary Midwayer}{0}
+\qstop
+
+\qstart{What was the name of Cain's wife?}
+{Remona}{1}
+{Ratta}{0}
+{Melpomena}{0}
+{Muzzah}{0}
+\qstop
+
+\qstart{What was the ``mark'' which Cain received?}
+{Tatoo}{0}
+{Thought Adjuster}{1}
+{Ear-ring}{0}
+{Burn on the forehead}{0}
 \qstop
 
 \qstart{Who were Andites?}
@@ -1080,6 +1494,21 @@
 {killed by his own son}{0}
 \qstop
 
+\qstart{Who was Laotta?}
+{mother of Adam's child}{1}
+{wife of Lot}{0}
+{daughter of Abraham and Sarah}{0}
+{mother of Cain}{0}
+\qstop
+
+\qstart{What did Adam do after committing default?}
+{committed suicide}{0}
+{wandered in solitude for 30 days}{1}
+{killed Eve and married Laotta}{0}
+{killed Laotta and begged Eve's forgiveness}{0}
+\qstop
+
+
 \qstart{What happened to Laotta, the mother of Sansa?}
 {died while giving birth to Sansa}{1}
 {died of old age}{0}
@@ -1088,6 +1517,45 @@
 \qstop
 
 \qpaper{77}{The Midway Creatures}
+
+\qstart{What is the origin of primary midwayers?}
+{offspring of Caligastia 100}{1}
+{offspring of Adamson \&\ Ratta}{0}
+{offspring of Adam \&\ Eve}{0}
+\qstop
+
+\qstart{How many primary midwayers were there originally?}
+{1,111}{0}
+{1,286}{0}
+{1,984}{0}
+{50,000}{1}
+{99,984}{0}
+\qstop
+
+
+\qstart{What or who is A-B-C the First?}
+{Primary Midwayer}{0}
+{Secondary Midwayer}{1}
+{Melchizedek}{0}
+{Seraphim}{0}
+{Cherubim}{0}
+\qstop
+
+\qstart{How many secondary midwayers were there originally?}
+{1,111}{0}
+{1,286}{0}
+{1,984}{1}
+{50,000}{0}
+{99,984}{0}
+\qstop
+
+\qstart{What is the origin of the secondary midwayers?}
+{Salvington}{0}
+{Uversa}{0}
+{offspring of the 16 invisible children of Adamson and Ratta}{1}
+{offspring of Adam and Eve}{0}
+{offspring of primary midwayers}{0}
+\qstop
 
 \qpaper{78}{The Violet Race after the Days of Adam}
 
@@ -1110,6 +1578,13 @@
 \qstop
 
 \qpaper{80}{Andite Expansion in the Occident}
+
+\qstart{Who was the leader of 375 most beautiful men since the days of the first Eden which settled in Greece about 10,000 B.C.?}
+{Sato, a direct descendant of Adamson and Ratta}{1}
+{Hercules}{0}
+{Zeus}{0}
+{Alexander the Great}{0}
+\qstop
 
 \qpaper{81}{Development of Modern Civilization}
 
@@ -1165,6 +1640,13 @@
 
 \qpaper{93}{Machiventa Melchizedek}
 
+\qstart{Whom did Melchizedek invite to his school in Salem?}
+{Abraham}{0}
+{Terah and his whole family}{0}
+{Nahor}{0}
+{Abraham and Nahor}{1}
+\qstop
+
 \qstart{Which of these was the teacher of Abraham?}
 {Lutentia}{0}
 {Lucifer}{0}
@@ -1174,6 +1656,13 @@
 {Mantutia Melchizedek}{0}
 {The Father Melchizedek}{0}
 {Yahweh, the God of Israel}{0}
+\qstop
+
+\qstart{Who introduced the tithing system into the schools of Melchizedek?}
+{Melchizedek}{0}
+{Abraham}{1}
+{Lot}{0}
+{Sarah}{0}
 \qstop
 
 \qpaper{94}{The Melchizedek Teachings in the Orient}
@@ -1205,6 +1694,12 @@
 {50\%}{0}
 {80\%}{1}
 {100\%}{0}
+\qstop
+
+\qstart{How did Solomon son of David bankrupt the nation?}
+{by his lavish court and elaborate building program}{1}
+{by waging wars}{0}
+{by his idleness}{0}
 \qstop
 
 \qpaper{98}{The Melchizedek Teachings in the Occident}
@@ -1408,6 +1903,23 @@
 
 \qpaper{122}{Birth and Infancy of Jesus}
 
+\qstart{When was John the Baptist born?}
+{25 March 7 B.C.}{1}
+{13 September 6 B.C.}{0}
+{1 January 4 B.C.}{0}
+{1 April 1 A.D.}{0}
+\qstop
+
+\qstart{Where was John the Baptist born?}
+{Jericho}{0}
+{Bethlehem}{0}
+{City of Judah}{1}
+{Alexandria}{0}
+{Zaphon}{0}
+{Philadelphia}{0}
+{Gilead}{0}
+\qstop
+
 \qstart{What was the ``Star of Bethlehem''?}
 {a brilliant evening star}{0}
 {a sign from God}{0}
@@ -1448,6 +1960,13 @@
 
 \qpaper{135}{John the Baptist}
 
+\qstart{Who was the leader of the Engedi colony of Nazarites?}
+{John the Baptist}{0}
+{John Zebedee}{0}
+{Jesus of Nazareth}{0}
+{Abner}{1}
+\qstop
+
 \qpaper{136}{Baptism and the Forty Days}
 
 \qpaper{137}{Tarrying Time in Galilee}
@@ -1455,6 +1974,14 @@
 \qpaper{138}{Training the Kingdom’s Messengers}
 
 \qpaper{139}{The Twelve Apostles}
+
+\qstart{Which of the Twelve Apostles of Jesus were Judeans?}
+{Peter and Andrew}{0}
+{Matthew, John, James and Peter}{0}
+{Matthew and Bartholomew}{0}
+{Only Judas Iscariot}{1}
+{All of them}{0}
+\qstop
 
 \qpaper{140}{The Ordination of the Twelve}
 
@@ -1510,6 +2037,13 @@
 
 \qpaper{166}{Last Visit to Northern Perea}
 
+\qstart{Who was the head of the church in Philadelphia?}
+{James (Jesus' brother)}{0}
+{Matthew}{0}
+{Mark}{0}
+{Abner}{1}
+\qstop
+
 \qpaper{167}{The Visit to Philadelphia}
 
 \qpaper{168}{The Resurrection of Lazarus}
@@ -1529,6 +2063,21 @@
 \qpaper{175}{The Last Temple Discourse}
 
 \qpaper{176}{Tuesday Evening on Mount Olivet}
+
+\qstart{When was the covenant between Israel and God abrogated and the plan to make the children of Abraham the light-bearers for the whole world shattered?}
+{Midnight, Tuesday 4 April 30 A.D.}{1}
+{15:30, Thursday 6 April 30 A.D.}{0}
+{Noon, Tuesday 4 April 30 A.D.}{0}
+{18:00, Wednesday 5 April 30 A.D.}{0}
+\qstop
+
+\qstart{What percentage of the Sanhedrin voted to put to death both the Son of God and Lazarus?}
+{100\%}{1}
+{95\%}{0}
+{60\%}{0}
+{80\%}{0}
+{25\%}{0}
+\qstop
 
 \qpaper{177}{Wednesday, the Rest Day}
 
@@ -1590,27 +2139,6 @@
 
 \qpaper{196}{The Faith of Jesus}
 
-\qstart{In which year did Cain slay Abel?}
-{35,776 B.C.}{1}
-{3,600 B.C.}{0}
-{no record of the date}{0}
-{27,561 B.C.}{0}
-\qstop
-
-\qstart{What is the registration number of our world in the local system of Satania?}
-{606}{1}
-{666}{0}
-{1201}{0}
-{37011}{0}
-\qstop
-
-\qstart{How many evolutionary superuniverses are in the grand universe?}
-{billions}{0}
-{7}{1}
-{24}{0}
-{Unknown}{0}
-\qstop
-
 \qstart{Which of these are forever forbidden to us?}
 {Divinington}{1}
 {nether Paradise}{1}
@@ -1627,128 +2155,6 @@
 {exactly on the border}{0}
 \qstop
 
-\qstart{Are there stars which emit light not accompanied by heat?}
-{yes}{1}
-{no}{0}
-\qstop
-
-\qstart{When was the last great ice age terminated?}
-{37,000 B.C.}{1}
-{47,000 B.C.}{0}
-{25,000 B.C.}{0}
-{10,500 B.C.}{0}
-\qstop
-
-\qstart{When did Adam and Eve appear?}
-{on the sixth day of creation, about 6,000 years ago}{0}
-{35,914 B.C.}{1}
-{335,437,011 B.C.}{0}
-{4,559 B.C.}{0}
-{236,992 B.C.}{0}
-\qstop
-
-\qstart{Which of these was a great leader of American red race 65,000 years ago?}
-{Onamonalonton}{1}
-{Sontad}{0}
-{Fantad}{0}
-{Porshunta}{0}
-{Onagar}{0}
-\qstop
-
-\qstart{What is the origin of the secondary midwayers?}
-{Salvington}{0}
-{Uversa}{0}
-{offspring of the 16 invisible children of Adamson and Ratta}{1}
-{offspring of Adam and Eve}{0}
-{offspring of primary midwayers}{0}
-\qstop
-
-\qstart{Which of these is the capital of our local universe?}
-{Salvington}{1}
-{Edentia}{0}
-{Uversa}{0}
-{Jerusem}{0}
-\qstop
-
-\qstart{Which of these is the capital of our local system?}
-{Salvington}{0}
-{Edentia}{0}
-{Uversa}{0}
-{Jerusem}{1}
-\qstop
-
-\qstart{Which of these is the headquarters of our superuniverse?}
-{Salvington}{0}
-{Edentia}{0}
-{Uversa}{1}
-{Jerusem}{0}
-\qstop
-
-\qstart{Who was Lucifer at the time of the rebellion?}
-{System Sovereign}{1}
-{Planetary Prince}{0}
-{Member of System Sovereign's Staff}{0}
-{Free from assignment}{0}
-\qstop
-
-\qstart{When did the Lucifer rebellion occur in the system of Satania?}
-{200,000 years ago}{1}
-{300,000 years ago}{0}
-{500,000 years ago}{0}
-{1 million years ago}{0}
-{6,000 years ago}{0}
-\qstop
-
-\qstart{Lucifer was a ...}
-{Primary Lanonandek Son}{1}
-{Secondary Lanonandek Son}{0}
-{Melchizedek}{0}
-{Seraphim}{0}
-{Archangel}{0}
-\qstop
-
-\qstart{Satan was a...}
-{Primary Lanonandek Son}{1}
-{Secondary Lanonandek Son}{0}
-{Melchizedek}{0}
-{Seraphim}{0}
-{Archangel}{0}
-\qstop
-
-\qstart{Caligastia was a..}
-{Primary Lanonandek Son}{0}
-{Secondary Lanonandek Son}{1}
-{Melchizedek}{0}
-{Seraphim}{0}
-{Archangel}{0}
-\qstop
-
-\qstart{The fallen prince Caligastia is now...}
-{freely roaming this planet}{1}
-{in custody}{0}
-{executed}{0}
-\qstop
-
-\qstart{Lucifer is now...}
-{freely roaming the local system of Satania}{0}
-{in custody}{1}
-{executed}{0}
-\qstop
-
-\qstart{Satan is now...}
-{freely roaming the local system of Satania}{0}
-{in custody}{1}
-{executed}{0}
-\qstop
-
-\qstart{The purpose of the Fifth Epochal Revelation is}
-{to expand cosmic consciousness and enhance spiritual perception}{1}
-{to overthrow all existing religions}{0}
-{to make progress faster}{0}
-{to make people righteous}{0}
-{to satisfy people's curiosity about life after death}{0}
-\qstop
-
 \qstart{The atonement doctrine is a...}
 {divinely inspired and true doctrine}{0}
 {affront and insult to God}{1}
@@ -1761,21 +2167,6 @@
 {From the Egyptians}{0}
 \qstop
 
-\qstart{Who was the great spiritual leader of the orange race about 300,000 years ago?}
-{Porshunta}{1}
-{Fantad}{0}
-{Sontad}{0}
-{Onamonalonton}{0}
-{Onagar}{0}
-\qstop
-
-\qstart{Where was the headquarters of the orange race?}
-{Armageddon}{1}
-{Jerusalem}{0}
-{Babylon}{0}
-{Memphis}{0}
-\qstop
-
 \qstart{Who is the eldest Primary Midwayer?}
 {1-2-3 the First}{1}
 {the Father Midwayer}{0}
@@ -1783,171 +2174,9 @@
 {Adam}{0}
 \qstop
 
-\qstart{Who was the first of the yellow men to teach and lead his people in the worship of ``One Truth'' instead of many?}
-{Singlangton}{1}
-{Orlandof}{0}
-{Porshunta}{0}
-{Enoch}{0}
-{Onamonalonton}{0}
-\qstop
-
-\qstart{What is the total number of associative possibilities of three Deities?}
-{7}{1}
-{9}{0}
-{3}{0}
-{12}{0}
-{24}{0}
-{$\infty$}{0}
-\qstop
-
-\qstart{Which number is inherent in the physical organization of energy and matter, but not in the spiritual?}
-{10}{1}
-{7}{0}
-{12}{0}
-{24}{0}
-\qstop
-
-\qstart{How many configurations (by inheritance carriers) of will creatures are there in Orvonton?}
-{7}{1}
-{12}{0}
-{10}{0}
-{Infinitely many}{0}
-\qstop
-
-\qstart{What or who is A-B-C the First?}
-{Primary Midwayer}{0}
-{Secondary Midwayer}{1}
-{Melchizedek}{0}
-{Seraphim}{0}
-{Cherubim}{0}
-\qstop
-
-\qstart{When was John the Baptist born?}
-{25 March 7 B.C.}{1}
-{13 September 6 B.C.}{0}
-{1 January 4 B.C.}{0}
-{1 April 1 A.D.}{0}
-\qstop
-
-\qstart{Who was the chief of the staff of Caligastia and the leader of the rebels?}
-{Abaddon}{1}
-{Beelzebub}{0}
-{Satan}{0}
-{Judas Iscariot}{0}
-\qstop
-
-\qstart{Who was the leader of the disloyal midway creatures?}
-{Beelzebub}{1}
-{Abaddon}{0}
-{Satan}{0}
-{Judas Iscariot}{0}
-\qstop
-
-\qstart{The dragon of the Revelation of John is symbolic of...}
-{Abaddon}{1}
-{Beelzebub}{1}
-{Lucifer}{1}
-{Satan}{1}
-{Judas Iscariot}{0}
-{Hitler}{0}
-\qstop
-
-\qstart{What was the ``mark'' which Cain received?}
-{Tatoo}{0}
-{Thought Adjuster}{1}
-{Ear-ring}{0}
-{Burn on the forehead}{0}
-\qstop
-
-\qstart{What was the name of Cain's wife?}
-{Remona}{1}
-{Ratta}{0}
-{Melpomena}{0}
-{Muzzah}{0}
-\qstop
-
-\qstart{What are abandonters doing at present?}
-{administering routine affairs of their world}{1}
-{helping evolutionary mortals}{0}
-{teaching morontia progressors}{0}
-{tending the gardens of Edentia}{0}
-\qstop
-
-\qstart{Who was the leader of the Engedi colony of Nazarites?}
-{John the Baptist}{0}
-{John Zebedee}{0}
-{Jesus of Nazareth}{0}
-{Abner}{1}
-\qstop
-
-\qstart{Who was the head of the church in Philadelphia?}
-{James (Jesus' brother)}{0}
-{Matthew}{0}
-{Mark}{0}
-{Abner}{1}
-\qstop
-
-\qstart{When did the aborigines of Australia abolish slavery?}
-{19th century}{0}
-{15th century}{0}
-{20th century}{0}
-{Never had slaves}{1}
-\qstop
-
 \qstart{Which of these two came first?}
 {Prayers}{1}
 {Belief in spirits}{0}
-\qstop
-
-\qstart{When was the covenant between Israel and God abrogated and the plan to make the children of Abraham the light-bearers for the whole world shattered?}
-{Midnight, Tuesday 4 April 30 A.D.}{1}
-{15:30, Thursday 6 April 30 A.D.}{0}
-{Noon, Tuesday 4 April 30 A.D.}{0}
-{18:00, Wednesday 5 April 30 A.D.}{0}
-\qstop
-
-\qstart{Which of the Twelve Apostles of Jesus were Judeans?}
-{Peter and Andrew}{0}
-{Matthew, John, James and Peter}{0}
-{Matthew and Bartholomew}{0}
-{Only Judas Iscariot}{1}
-{All of them}{0}
-\qstop
-
-\qstart{What percentage of the Sanhedrin voted to put to death both the Son of God and Lazarus?}
-{100\%}{1}
-{95\%}{0}
-{60\%}{0}
-{80\%}{0}
-{25\%}{0}
-\qstop
-
-\qstart{Who introduced the tithing system into the schools of Melchizedek?}
-{Melchizedek}{0}
-{Abraham}{1}
-{Lot}{0}
-{Sarah}{0}
-\qstop
-
-\qstart{Who was the ``Most High'', which Melchizedek is said to be the priest of?}
-{Yahweh, the Lord God of Israel}{0}
-{Father Melchizedek}{0}
-{Vorondadek observer}{1}
-{Michael of Nebadon}{0}
-\qstop
-
-\qstart{Whom did Melchizedek invite to his school in Salem?}
-{Abraham}{0}
-{Terah and his whole family}{0}
-{Nahor}{0}
-{Abraham and Nahor}{1}
-\qstop
-
-\qstart{What is the lowest density of matter-energy known in our local universe?}
-{100 ultimatons per cubic inch}{1}
-{10 ultimatons per cubic inch}{0}
-{1 ultimaton per cubic inch}{0}
-{0}{0}
 \qstop
 
 \qstart{By loss of one or more ultimatons how many modified forms of electron one may obtain?}
@@ -1965,20 +2194,6 @@
 \qstart{Did the Absolute (the three Absolutes as one in infinity) exist before the Trinity?}
 {no}{1}
 {yes}{0}
-\qstop
-
-\qstart{One Paradise-Havona day is equivalent to how much Urantia time?}
-{100 years}{0}
-{30 days}{0}
-{15 days}{0}
-{1000 years}{1}
-{1 day}{0}
-\qstop
-
-\qstart{What is the origin of primary midwayers?}
-{offspring of Caligastia 100}{1}
-{offspring of Adamson \&\ Ratta}{0}
-{offspring of Adam \&\ Eve}{0}
 \qstop
 
 \qstart{What is the result of elevating purely personal evaluations to the levels of absolutes?}
@@ -2042,27 +2257,6 @@
 {yes}{0}
 \qstop
 
-\qstart{What is the minimal size of Adamic family required for initiating racial uplifting of human races?}
-{500,000 persons}{1}
-{100 persons}{0}
-{1,000,000 persons}{0}
-{40 persons}{0}
-\qstop
-
-\qstart{Who was Laotta?}
-{mother of Adam's child}{1}
-{wife of Lot}{0}
-{daughter of Abraham and Sarah}{0}
-{mother of Cain}{0}
-\qstop
-
-\qstart{What did Adam do after committing default?}
-{committed suicide}{0}
-{wandered in solitude for 30 days}{1}
-{killed Eve and married Laotta}{0}
-{killed Laotta and begged Eve's forgiveness}{0}
-\qstop
-
 \qstart{Adam and Eve were indwelt by Thought Adjusters...}
 {when they were citizens of Jerusem}{0}
 {during their life in the first garden prior to the default}{0}
@@ -2083,12 +2277,6 @@
 {3}{0}
 \qstop
 
-\qstart{Were Adam and Eve able to see midwayers, angels, Melchizedeks and Caligastia after the default?}
-{yes, but only for 100 years}{1}
-{yes, for as long as they lived}{0}
-{no}{0}
-\qstop
-
 \qstart{At what age did Adamic children become eligible for marriage?}
 {20}{1}
 {18}{0}
@@ -2096,26 +2284,11 @@
 {30}{0}
 \qstop
 
-\qstart{What form of government did Adam and Eve find upon their arrival on Urantia?}
-{democracy}{0}
-{theocracy}{0}
-{oligarchy}{0}
-{no government worthy of a name}{1}
-\qstop
-
 \qstart{When did Adamites cease to exist as a race upon Urantia?}
 {15,000 B.C.}{1}
 {6,000 B.C.}{0}
 {600 B.C.}{0}
 {300 A.D.}{0}
-\qstop
-
-\qstart{What was the name of the city of the Planetary Prince Caligastia?}
-{Babylon the Great}{0}
-{Akkad}{0}
-{Dalamatia}{1}
-{Jerusalem}{0}
-{Eden}{0}
 \qstop
 
 \qstart{What happened to the tree of life after Nodites invaded Eden?}
@@ -2139,7 +2312,7 @@
 {1}{0}
 \qstop
 
-\qstart{Which of the coloured races of humans was preferred by Adamites?}
+\qstart{Which of the coloured races of humans was preferred by Adamites for mating?}
 {blue}{1}
 {red}{0}
 {yellow}{0}
@@ -2150,19 +2323,6 @@
 {exterminated by the Adamites}{1}
 {became extinct}{0}
 {exterminated by the Nodites}{0}
-\qstop
-
-\qstart{When does the history of our planet officially begin?}
-{1 billion years ago}{1}
-{100 million years ago}{0}
-{1 million years ago}{0}
-{6000 years ago}{0}
-\qstop
-
-\qstart{How did Solomon son of David bankrupt the nation?}
-{by his lavish court and elaborate building program}{1}
-{by waging wars}{0}
-{by his idleness}{0}
 \qstop
 
 \qstart{Which two of the coloured races of humans exhibited strains of giantism?}
@@ -2179,38 +2339,11 @@
 {red and yellow}{0}
 \qstop
 
-\qstart{Which three of the evolutionary races are primary (superior intellectually and spiritually)?}
-{red, yellow and blue}{1}
-{red, green and blue}{0}
-{orange, green and indigo}{0}
-{orange, green and blue}{0}
-\qstop
-
-\qstart{Which three of the evolutionary races are secondary (inferior intellectually and spiritually)?}
-{orange, green and indigo}{1}
-{red, yellow and orange}{0}
-{red, yellow and blue}{0}
-{orange, yellow and indigo}{0}
-\qstop
-
-\qstart{How did Andon and Fonta's parents die?}
-{killed by gibbons}{1}
-{killed by saber-toothed cat Smilodon}{0}
-{died of old age}{0}
-\qstop
-
 \qstart{When is the slavery abolished on a normal evolutionary sphere?}
 {upon arrival of Adam}{1}
 {upon arrival of Planetary Prince}{0}
 {in the age of Light and Life}{0}
 {persists forever}{0}
-\qstop
-
-\qstart{What is man's choicest (in fact, the only) gift to God?}
-{consecration of will}{1}
-{prayer}{0}
-{meditation}{0}
-{helping the poor}{0}
 \qstop
 
 \qstart{When was goat domesticated?}
@@ -2237,13 +2370,6 @@
 {Adamites and Adamsonites}{1}
 {Andites and Andonites}{0}
 {mixture of blue and red races}{0}
-\qstop
-
-\qstart{Who was the leader of 375 most beautiful men since the days of the first Eden which settled in Greece about 10,000 B.C.?}
-{Sato, a direct descendant of Adamson and Ratta}{1}
-{Hercules}{0}
-{Zeus}{0}
-{Alexander the Great}{0}
 \qstop
 
 \qstart{What does the Bible refer to when it talks about ``the seven spirits of God like lamps burning before the throne''?}
@@ -2308,14 +2434,6 @@
 {knowledge}{0}
 \qstop
 
-\qstart{Where do all personal beings derive their personality from?}
-{Universal Father}{1}
-{Eternal Son}{0}
-{Infinite Spirit}{0}
-{God the Sevenfold}{0}
-{Paradise Creator Sons}{0}
-\qstop
-
 \qstart{Does the Eternal Son fully comprehend the eternal plan of the Universal Father for the universe of universes?}
 {yes}{1}
 {no}{0}
@@ -2359,20 +2477,6 @@
 {7 years}{0}
 {20 years}{0}
 {40 years}{0}
-\qstop
-
-\qstart{How many years did Andon and Fonta live?}
-{42}{1}
-{45}{0}
-{120}{0}
-{486}{0}
-\qstop
-
-\qstart{How did Andon and Fonta die?}
-{rock fell on them during an earthquake}{1}
-{drowned}{0}
-{killed by gibbons}{0}
-{ate poison mushrooms}{0}
 \qstop
 
 \qstart{Which present-day group of people resembles the early Andonites most?}
@@ -2765,11 +2869,11 @@
 \qstop
 
 \qstart{How old was Jesus when he was crucified?}
-{35 years}{1}
-{33 years}{0}
-{40 years}{0}
 {30 years}{0}
+{33 years}{0}
+{35 years}{1}
 {36 years}{0}
+{40 years}{0}
 \qstop
 
 \qstart{Who said that ``the spiritually blind soul... who follows scientific dictation.. and religious dogma... is destined to become an intellectual parrot, a social automaton, and a slave to religious authority''?}
@@ -4194,45 +4298,6 @@
 {three Faithfuls of Days}{0}
 {a Recent of Days}{0}
 {seven Recents of Days}{0}
-\qstop
-
-\qstart{How many inhabited planets constitute a system?}
-{1000}{1}
-{1024}{0}
-{500}{0}
-{777}{0}
-{1000000}{0}
-\qstop
-
-\qstart{How many systems constitute a constellation?}
-{100}{1}
-{10}{0}
-{24}{0}
-{100000}{0}
-{70}{0}
-\qstop
-
-\qstart{How many inhabited worlds can there be in a single constellation?}
-{100000}{1}
-{1000}{0}
-{1000000}{0}
-{777}{0}
-\qstop
-
-\qstart{How many constellations constitute a local universe?}
-{100}{1}
-{10}{0}
-{24}{0}
-{100000}{0}
-{70}{0}
-\qstop
-
-\qstart{How many inhabited worlds can there be in a local universe?}
-{100000}{0}
-{1000}{0}
-{10000000}{1}
-{777777}{0}
-{700000}{0}
 \qstop
 
 \qstart{Each local universe has a magnificent architectural sphere as its headquarters and is ruled by ...}
