--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -4760,7 +4760,7 @@
 {no}{1}
 \qstop
 
-\qstart{How many of the 50 Reflective Spirits are of Paradise Trinity origin*}
+\qstart{How many of the 50 Reflective Spirits are of Paradise Trinity origin?}
 {all 50}{0}
 {49}{1}
 {7}{0}
