--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -401,6 +401,11 @@
 
 \qpaper{4}{God’s Relation to the Universe}
 
+\qstart{The atonement doctrine is a...}
+{divinely inspired and true doctrine}{0}
+{affront and insult to God}{1}
+\qstop
+
 \qstart{Who forbade the Hebrews to perform the human sacrifices?}
 {Abraham}{0}
 {Moses}{1}
@@ -421,6 +426,32 @@
 {Jerusem}{0}
 \qstop
 
+\qstart{Does the Eternal Son fragmentize his nature like the Universal Father?}
+{no}{1}
+{yes}{0}
+\qstop
+
+\qstart{Does the Eternal Son bestow personality?}
+{no}{1}
+{yes}{0}
+\qstop
+
+\qstart{Is the Eternal Son omnipotent?}
+{only in the spiritual realm}{1}
+{only in the physical realm}{0}
+{yes, in both physical and spiritual realms}{0}
+\qstop
+
+\qstart{Is the Eternal Son omniscient (all-knowing)?}
+{yes}{1}
+{no}{0}
+\qstop
+
+\qstart{Can the Creator Sons transmit the prerogatives of creatorship?}
+{yes}{0}
+{no}{1}
+\qstop
+
 \qpaper{7}{Relation of the Eternal Son to the Universe}
 
 \qpaper{8}{The Infinite Spirit}
@@ -430,6 +461,19 @@
 \qpaper{10}{The Paradise Trinity}
 
 \qpaper{11}{The Eternal Isle of Paradise}
+
+\qstart{What is the source of absolute gravity?}
+{Paradise}{1}
+{mind}{0}
+{matter}{0}
+{spirit}{0}
+\qstop
+
+\qstart{Is Paradise substance (absoluta) dead or alive?}
+{Dead}{0}
+{Alive}{0}
+{Neither dead nor alive}{1}
+\qstop
 
 \qstart{Does space respond to gravity?}
 {no}{1}
@@ -664,6 +708,13 @@
 {70,000}{0}
 \qstop
 
+\qstart{By loss of one or more ultimatons how many modified forms of electron one may obtain?}
+{100}{0}
+{10}{1}
+{7}{0}
+{50}{0}
+\qstop
+
 \qpaper{43}{The Constellations}
 
 \qstart{Who was the ``Most High'', which Melchizedek is said to be the priest of?}
@@ -822,6 +873,11 @@
 \qpaper{55}{The Spheres of Light and Life}
 
 \qpaper{56}{Universal Unity}
+
+\qstart{Did the Absolute (the three Absolutes as one in infinity) exist before the Trinity?}
+{no}{1}
+{yes}{0}
+\qstop
 
 \qpaper{57}{The Origin of Urantia}
 
@@ -1077,6 +1133,28 @@
 {Sontad}{0}
 \qstop
 
+\qstart{Which of the coloured races of humans was preferred by Adamites for mating?}
+{blue}{1}
+{red}{0}
+{yellow}{0}
+{indigo}{0}
+\qstop
+
+\qstart{Which two of the coloured races of humans exhibited strains of giantism?}
+{green and orange}{1}
+{yellow and red}{0}
+{blue and indigo}{0}
+{blue and green}{0}
+\qstop
+
+\qstart{Which coloured races of our planet perished?}
+{green and orange}{1}
+{green and indigo}{0}
+{blue and indigo}{0}
+{red and yellow}{0}
+\qstop
+
+
 \qstart{Where is now the orange race of humans?}
 {became extinct}{1}
 {was taken by aliens}{0}
@@ -1190,6 +1268,22 @@
 {500 years}{0}
 {50,000 years}{0}
 {25 years}{0}
+\qstop
+
+\qstart{What is the origin of the custom of nonflesh diet?}
+{Caligastia 100}{1}
+{Adam and Eve}{0}
+{Moses}{0}
+{the Egyptians}{0}
+{the Babylonians}{0}
+\qstop
+
+\qstart{At what age did the graduates of Dalamatia school become eligible for marriage?}
+{13}{0}
+{15}{1}
+{18}{0}
+{20}{0}
+{30}{0}
 \qstop
 
 \qpaper{67}{The Planetary Rebellion}
@@ -1333,6 +1427,15 @@
 {18}{0}
 {22}{0}
 {26}{0}
+\qstop
+
+\qstart{At what age did Adamic children become eligible for marriage?}
+{14}{0}
+{16}{0}
+{18}{0}
+{20}{1}
+{25}{0}
+{30}{0}
 \qstop
 
 \qstart{Who taught the younger children of Adam at school?}
@@ -1559,6 +1662,13 @@
 
 \qpaper{78}{The Violet Race after the Days of Adam}
 
+\qstart{The violet race consisted of...}
+{pure Adamites only}{0}
+{Adamites and Adamsonites}{1}
+{Andites and Andonites}{0}
+{mixture of blue and red races}{0}
+\qstop
+
 \qstart{How many Adamites were living on Urantia by 19,000 B.C.?}
 {1 million}{0}
 {4.5 million}{1}
@@ -1680,6 +1790,14 @@
 {Confucius (Kung Fu-tze)}{0}
 {Ikhnaton}{0}
 {Krishna}{0}
+\qstop
+
+\qstart{Which of these were the main commandments of Gautama Siddhartha?}
+{You shall not kill}{1}
+{You shall not steal}{1}
+{You shall not be unchaste}{1}
+{You shall not lie}{1}
+{You shall not drink intoxicating liquors}{1}
 \qstop
 
 \qpaper{95}{The Melchizedek Teachings in the Levant}
@@ -2155,18 +2273,6 @@
 {exactly on the border}{0}
 \qstop
 
-\qstart{The atonement doctrine is a...}
-{divinely inspired and true doctrine}{0}
-{affront and insult to God}{1}
-\qstop
-
-\qstart{Where does the custom of nonflesh diet come from?}
-{From Caligastia 100}{1}
-{From Adam and Eve}{0}
-{From Moses}{0}
-{From the Egyptians}{0}
-\qstop
-
 \qstart{Who is the eldest Primary Midwayer?}
 {1-2-3 the First}{1}
 {the Father Midwayer}{0}
@@ -2179,21 +2285,9 @@
 {Belief in spirits}{0}
 \qstop
 
-\qstart{By loss of one or more ultimatons how many modified forms of electron one may obtain?}
-{100}{0}
-{10}{1}
-{7}{0}
-{50}{0}
-\qstop
-
 \qstart{Does cosmic force respond to mind?}
 {no}{0}
 {yes}{1}
-\qstop
-
-\qstart{Did the Absolute (the three Absolutes as one in infinity) exist before the Trinity?}
-{no}{1}
-{yes}{0}
 \qstop
 
 \qstart{What is the result of elevating purely personal evaluations to the levels of absolutes?}
@@ -2203,58 +2297,11 @@
 {iniquity}{0}
 \qstop
 
-\qstart{Is Paradise substance (absoluta) dead or alive?}
-{Dead}{0}
-{Alive}{0}
-{Neither dead nor alive}{1}
-\qstop
-
 \qstart{Which of these are NOT absonite beings?}
 {Architects of the Master Universe}{0}
 {Primary Master Force Organizers}{0}
 {Transcendental Recorders}{0}
 {Seven Master Spirits}{1}
-\qstop
-
-\qstart{What is the source of absolute gravity?}
-{Paradise}{1}
-{mind}{0}
-{matter}{0}
-{spirit}{0}
-\qstop
-
-\qstart{Which of these were the main commandments of Gautama Siddhartha?}
-{You shall not kill}{1}
-{You shall not steal}{1}
-{You shall not be unchaste}{1}
-{You shall not lie}{1}
-{You shall not drink intoxicating liquors}{1}
-\qstop
-
-\qstart{Is the Eternal Son omnipotent?}
-{only in the spiritual realm}{1}
-{only in the physical realm}{0}
-{yes, in both physical and spiritual realms}{0}
-\qstop
-
-\qstart{Is the Eternal Son omniscient (all-knowing)?}
-{yes}{1}
-{no}{0}
-\qstop
-
-\qstart{Can the Creator Sons transmit the prerogatives of creatorship?}
-{yes}{0}
-{no}{1}
-\qstop
-
-\qstart{Does the Eternal Son bestow personality?}
-{no}{1}
-{yes}{0}
-\qstop
-
-\qstart{Does the Eternal Son fragmentize his nature like the Universal Father?}
-{no}{1}
-{yes}{0}
 \qstop
 
 \qstart{Adam and Eve were indwelt by Thought Adjusters...}
@@ -2275,13 +2322,6 @@
 {100}{1}
 {none}{0}
 {3}{0}
-\qstop
-
-\qstart{At what age did Adamic children become eligible for marriage?}
-{20}{1}
-{18}{0}
-{16}{0}
-{30}{0}
 \qstop
 
 \qstart{When did Adamites cease to exist as a race upon Urantia?}
@@ -2312,31 +2352,10 @@
 {1}{0}
 \qstop
 
-\qstart{Which of the coloured races of humans was preferred by Adamites for mating?}
-{blue}{1}
-{red}{0}
-{yellow}{0}
-{indigo}{0}
-\qstop
-
 \qstart{What happened to the remnants of Neanderthal races?}
 {exterminated by the Adamites}{1}
 {became extinct}{0}
 {exterminated by the Nodites}{0}
-\qstop
-
-\qstart{Which two of the coloured races of humans exhibited strains of giantism?}
-{green and orange}{1}
-{yellow and red}{0}
-{blue and indigo}{0}
-{blue and green}{0}
-\qstop
-
-\qstart{Which coloured races of our planet perished?}
-{green and orange}{1}
-{green and indigo}{0}
-{blue and indigo}{0}
-{red and yellow}{0}
 \qstop
 
 \qstart{When is the slavery abolished on a normal evolutionary sphere?}
@@ -2365,13 +2384,6 @@
 {no}{0}
 \qstop
 
-\qstart{The violet race consisted of...}
-{pure Adamites only}{0}
-{Adamites and Adamsonites}{1}
-{Andites and Andonites}{0}
-{mixture of blue and red races}{0}
-\qstop
-
 \qstart{What does the Bible refer to when it talks about ``the seven spirits of God like lamps burning before the throne''?}
 {seven adjutant mind-spirits}{1}
 {seven Absolutes}{0}
@@ -2379,10 +2391,11 @@
 \qstop
 
 \qstart{How many adjutant mind-spirits are there?}
-{12}{0}
-{4}{0}
 {3}{0}
+{4}{0}
 {7}{1}
+{10}{0}
+{12}{0}
 \qstop
 
 \qstart{Which of these is NOT one of the seven adjutant mind-spirits?}
